# SkyWatcher

./: CMakeLists.txt  Cerebrum.cpp  Cerebrum.h  Drone.cpp  Drone.h  GridDefinitions.h  README.md  SkyWatcher.cpp  Structs.h  WatchZone.cpp  WatchZone.h
Drone/: Drone.cpp  Drone.h  main.cpp
Monitor/: CellMonitor.cpp  monitor.cpp
Redis/: Redis.h
SkyWatcher/: Cerebrum.cpp  Cerebrum.h  SkyWatcher.cpp  WatchZone.cpp  WatchZone.h
Utils/: Logger.cpp  Logger.h  Redis.h  Structs.h  utils.cpp  utils.h
